--- a/HTML/about.html
+++ b/HTML/about.html
@@ -15,49 +15,44 @@
     <title>Poshn</title>
   </head>
   <body>
-    <header class="header">
-      <nav class="nav w-full bg-color-7 flex flex-jc-sb flex-ai-c p-0">
-        <div class="bg-color-7 w-full p-12">
-          <div class="wrapper">
-            <div class="content flex flex-jc-sb flex-ai-c">
-              <!-- Logo -->
-              <a href="/index.html" class="nav-logo logo-1"></a>
+    <header class="header bg-color-7">
+      <nav class="nav">
+        <div class="wrapper flex flex-jc-sb flex-ai-c bg-color-7">
+          <!-- Logo -->
+          <a href="/index.html" class="logo logo-1"></a>
 
-              <!-- Hamburger -->
-              <button
-                class="nav-hamburger bg-none flex flex-col flex-jc-sb color-5"
-              >
-                <span class="bg-color-5"></span>
-                <span class="bg-color-5"></span>
-                <span class="bg-color-5"></span>
-              </button>
+          <!-- Hamburger -->
+          <button class="hamburger flex flex-col flex-jc-sb">
+            <span class="bg-color-5"></span>
+            <span class="bg-color-5"></span>
+            <span class="bg-color-5"></span>
+          </button>
 
-              <!-- menu -->
-              <div class="nav-menu-desk flex flex-jc-sb">
-                <a href="/HTML/about.html" class="color-5">About</a>
-                <a href="#" class="color-5">Diet guide</a>
-                <a href="#" class="color-5">Our partners</a>
-                <a href="#" class="color-5">Blogs</a>
-                <a href="#" class="color-5">Survey</a>
-              </div>
-
-              <!-- Button -->
-              <button class="nav-cta btn btn-light">Let's get healthy</button>
-            </div>
+          <!--Desktop Menu -->
+          <div class="menu-desk flex-jc-sb flex-ai-c">
+            <a href="/HTML/about.html" class="color-5">About</a>
+            <a href="#" class="color-5">Diet guide</a>
+            <a href="#" class="color-5">Our partners</a>
+            <a href="#" class="color-5">Blogs</a>
+            <a href="#" class="color-5">Survey</a>
           </div>
+
+          <!-- Button -->
+          <button class="cta btn btn-light">Let's get healthy</button>
+        </div>
+
+        <!-- Overlay -->
+        <div class="overlay"></div>
+
+        <!--Mobile Menu -->
+        <div class="menu-mob">
+          <a href="/HTML/about.html" class="color-5">About</a>
+          <a href="#" class="color-5">Diet guide</a>
+          <a href="#" class="color-5">Our partners</a>
+          <a href="#" class="color-5">Blogs</a>
+          <a href="#" class="color-5">Survey</a>
         </div>
       </nav>
-      <!-- Overlay -->
-      <div class="nav-overlay none"></div>
-
-      <!-- menu -->
-      <div class="nav-menu-mob flex flex-jc-sb">
-        <a href="/HTML/about.html" class="color-5">About</a>
-        <a href="#" class="color-5">Diet guide</a>
-        <a href="#" class="color-5">Our partners</a>
-        <a href="#" class="color-5">Blogs</a>
-        <a href="#" class="color-5">Survey</a>
-      </div>
     </header>
 
     <div class="page-title about bg-color-7">
