fix booking form mobile view

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -76,7 +76,7 @@
               received numerous accolades, including two National Film Awards
               and five Film fare Awards.
             </p>
-            <button class="btn btn-toggle">Read more</button>
+            <button class="btn btn-toggle none">Read more</button>
           </div>
         </div>
       </section>
