added few leaves

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 
       <!-- diet chart -->
       <section class="has-snap has-ani diet-chart bg-color-4">
+        <img class="leaf" src="/Assets/svg/diet-chart-leaf.svg" />
         <img class="img" src="Assets/citrusfruit.png" />
         <div class="wrapper">
           <div class="text">
